# glmvng

./: .gitignore  README.md  config  config-osc  meson.build
shaders/: bar.geom  bar.vert  osc.frag  osc.geom  osc.vert  osc_ring.vert  simple.frag  spec_lines.vert
src/: Buffer.cpp  Buffer.hpp  Config.cpp  Config.hpp  Drawbuffer.cpp  Drawbuffer.hpp  FFT.cpp  FFT.hpp  GLFW.cpp  GLFW.hpp  GLXwindow.cpp  GLXwindow.hpp  GL_utils.cpp  GL_utils.hpp  Magnitudes.hpp  Module_Config.hpp  Multisampler.hpp  Processing.cpp  Processing.hpp  Pulse_Async.cpp  Pulse_Async.hpp  RenderConfig.hpp  Renderer.cpp  Renderer.hpp  Scalar.hpp  ShaderConfig.hpp  Utils.cpp  Utils.hpp  cv_test.cpp  main.cpp  meson.build  xdg.cpp  xdg.hpp
src/tests/: buffertest.cpp  meson.build
